--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <h1>Hello world</h1>
+
 <% flash.each do |name, msg| %>
 	<% if msg == "updated" %>
 		<script type="text/javascript">
