--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,150 @@
  *= require_tree .
  *= require_self
  */
+
+/*==========
+General
+==========*/
+body {
+    background: #F5F5F5;
+    font-family: 'Roboto Condensed', 'Helvetica Neue';
+    margin: 0px;
+    padding: 0px;
+}
+
+ul, li, h1, h2, h3, h4, h5, p {
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    max-width: 100%;
+}
+
+.btn {
+    font-size: 0.8em;
+}
+
+.btn.btn-primary {
+    background: #1DAFC9;
+    border: 1px solid #13879D;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+
+.breadcrumb {
+    background: none;
+    border: 0px;
+    -webkit-border-radius: 0px;
+    border-radius: 0px;
+    color: #999999;
+    font-size: 0.85em;
+    margin-bottom: 15px;
+    padding: 15px 0px;
+}
+
+.breadcrumb li {
+    display: inline-block;
+    float: left;
+    list-style: none;
+}
+
+.breadcrumb li a {
+    color: #999999;
+    font-weight: 200;
+}
+
+.breadcrumb li i {
+    margin: 0px 4px;
+}
+
+.tooltip-inner {
+    background: #004B58;
+    font-weight: 400;
+    padding: 5px 15px;
+}
+
+.tooltip.top .tooltip-arrow {
+    border-top-color:#004B58;
+}
+
+/*==========
+Navbar
+==========*/
+.navbar {
+    background-color: #035B6A;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
+    border: 0px;
+    -webkit-box-shadow: 0px 1px 4px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 1px 4px rgba(0,0,0,0.2);
+    -o-box-shadow: 0px 1px 4px rgba(0,0,0,0.2);
+    box-shadow: 0px 1px 4px rgba(0,0,0,0.2);
+    font-family: 'Open Sans';
+}
+
+.navbar .brand {
+    display: inline-block;
+    float: left;
+    margin-right: 25px;
+    padding: 16px 0px 17px 0px;
+    width: 140px;
+}
+
+.navbar .navlinks {
+    display: inline-block;
+    float: left;
+}
+
+.navbar li {
+    display: inline-block;
+    list-style: none;
+}
+
+.navbar .navlinks li {
+    display: inline-block;
+    float: left;
+}
+
+.navbar .navlinks li a {
+    color: #ffffff;
+    display: block;
+    font-size: 0.85em;
+    font-weight: 200;
+    padding: 19px 20px 18px 20px;
+    -webkit-transition: 0.25s;
+    -moz-transition: 0.25s;
+    -o-transition: 0.25s;
+    transition: 0.25s;
+}
+
+.navbar .navlinks li.active a {
+    background-color: #004B58;
+    font-weight: 700;
+}
+
+.navbar .navlinks li a:hover {
+    background: #03515e;
+    text-decoration: none;
+}
+
+.navbar .login-signup {
+    padding: 13px 0px 12px 0px;
+    text-align: right;
+}
+
+.navbar .login-signup ul li:first-child a {
+    color: #ffffff;
+    font-size: 0.8em;
+    margin-right: 15px;
+}
+
+/*==========
+Footer
+==========*/
+footer {
+    padding: 25px 0px;
+    text-align: center;
+}
