--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>RubyGettingStarted</title>
+    <title>Science Owl</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" %>
     <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700|Roboto+Slab:400,100,300" %>
-    <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" %>
     <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" %>
     <%= stylesheet_link_tag "application", :media => "all" %>
-    <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" %>
 </head>
 <body>
-
-<%= yield %>
-
+    <div class="navbar">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <div class="brand">
+                        <%= image_tag "logo.png" %>
+                    </div>
+                    <ul class="navlinks">
+                        <li class="active">
+                            <a href="">FIELDS</a>
+                        </li>
+                        <li>
+                            <a href="">YOUR INSTITUTION</a>
+                        </li>
+                        <li>
+                            <a href="">AUTHORS YOU FOLLOW</a>
+                        </li>
+                        <li>
+                            <a href="">CONTACT US</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <div class="login-signup">
+                        <ul>
+                            <li>
+                                <a href="">LOGIN</a>
+                            </li>
+                            <li>
+                                <a class="btn btn-primary" href="">SIGN UP</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <%= yield %>
+    </div>
+    <footer>
+        <div class="container">
+            <p>Copyright &copy; 2015. ScienceOwl. All Rights Reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
