--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,18 +6,17 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" %>
     <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700|Roboto+Slab:400,100,300" %>
     <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" %>
     <%= stylesheet_link_tag "application", :media => "all" %>
 </head>
-<body>
+<body class="<%= controller_name %>-<%= action_name %>">
     <div class="navbar">
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
                     <div class="brand">
-                        <%= image_tag "logo.png" %>
+                        <%= link_to image_tag("logo.png"), {:controller => :welcome} %>
                     </div>
                     <ul class="navlinks">
                         <li class="active">
