--- a/app/views/pages/publication.html.erb
+++ b/app/views/pages/publication.html.erb
@@ -6,6 +6,8 @@
         <li><a href="">Pericytes Are the Progenitors of Epicardial-Derived Smooth Muscle Cells in the Heart</a></li>
     </ul>
 </div>
+<%= @filetext %>
+<% end %>
 <div class="publication-wrapper">
     <div class="row">
         <div class="col-md-8">
