Incorporated scripts, updated layout and schema -- we finally have live data ;)

--- a/app/assets/stylesheets/publication.css.scss
+++ b/app/assets/stylesheets/publication.css.scss
@@ -1,4 +1,4 @@
-.pages-publication {
+.publications-show {
     .publication-wrapper {
         background: #ffffff;
         border: 1px solid #e5e5e5;
