--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,7 +11,7 @@
  * file per style scope.
  *
  *= require_self
- *= require pages
+ *= require publications
  */
 
 @import "bootstrap-sprockets";
