--- a/app/assets/stylesheets/feed.css.scss
+++ b/app/assets/stylesheets/feed.css.scss
@@ -1,4 +1,5 @@
-body.welcome-index {
+body.publications-index {
+    background: #FDFDF8;
     .publication {
         background: #ffffff;
         border: 1px solid #d9d9d9;
@@ -8,16 +9,16 @@ body.welcome-index {
         padding: 20px;
 
         .title {
-            color: #4e4e4e;
+            color: #00B1A1;
             display: block;
-            font-size: 1.75em;
+            font-size: 1.25em;
             font-weight: 700;
         }
 
         .excerpt {
             color: #444444;
             font-family: 'Roboto Slab';
-            font-size: 0.9em;
+            font-size: .8em;
             font-weight: 300;
             margin: 10px 0px 25px 0px;
         }
