--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="brand">
-                        <%= link_to image_tag("logo.png"), {:controller => :welcome} %>
+                        <%= link_to image_tag("logo.png"), "/"%>
                     </div>
                     <ul class="navlinks">
                         <li class="active">
