--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -6,19 +6,21 @@
     </ul>
 </div>
 <div class="publications-list">
-    <% @publications.each do |publication| %>
+    <% @pubs.each do |publication| %>
         <div class="publication">
             <span class="category"><%= publication[0]["category"] %></span>
             <%= link_to publication[0]["title"], { :controller => :pages, :action => :publication}, :class => 'title' %>
-            <p class="excerpt">The coronary arteries are one of the medically most relevant vessels. They are often affected in diseases like atherosclerosis leading to blockage of the coronary arteries eventually results in heart attacks. If we want to regenerate the coronary arteries or help them during disease...</p>
+            <p class="excerpt">
+            <%= publication[0]["abstract"] %>
+            </p>
             <div class="clearfix">
                 <div class="author clearfix">
                     <div class="image">
                         <%= image_tag "default.jpg" %>
                     </div>
                     <div class="info">
-                        <h3 class="name">KS Volz</h3>
-                        <span class="pub-date">Published on 1/3/15</span>
+                        <h3 class="name"><%= publication[0]["authors"][0,100] %></h3>
+                        <span class="pub-date">Created on <%= publication[0]["date"] %></span>
                     </div>
                 </div>
                 <div class="actions">
