--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,7 +10,6 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require publications
  *= require_self
  */
 
@@ -19,3 +18,4 @@
 
 @import "_scaffolds";
 @import "site";
+@import "publications";
