--- a/app/views/publications/show.html.erb
+++ b/app/views/publications/show.html.erb
@@ -15,14 +15,16 @@
                     <label>Fields:</label>
                     <ul>
                         <li>
-                            <a href="">Stem Cell Biology</a>,
+                            <a href="">Stem Cell Biology</a>
                         </li>
-                        <li>
+                        <% if(@publication.pmid != 2898810) %>
+                        ,<li>
                             <a href="">Cardiology</a>,
                         </li>
                         <li>
                             <a href="">Vascular Biology</a>
                         </li>
+                        <% end %>
                     </ul>
                 </div>
                 <div class="isec authors">
@@ -37,16 +39,13 @@
                 </div>
                 <ul class="tags">
                     <li>
-                        <a href="">coronary arteries</a>
+                        <a href="">blood-forming stem cell</a>
                     </li>
                     <li>
-                        <a href="">smooth muscle cells</a>
+                        <a href="">hematopoietic stem cell</a>
                     </li>
                     <li>
-                        <a href="">pericytes</a>
-                    </li>
-                    <li>
-                        <a href="">coronary artery disease</a>
+                        <a href="">bone marrow transplant</a>
                     </li>
                 </ul>
             </div>
