--- a/app/assets/stylesheets/feed.css.scss
+++ b/app/assets/stylesheets/feed.css.scss
@@ -8,10 +8,10 @@ body.publications-index {
         padding: 20px;
 
         .title {
-            color: #00B1A1;
+            color: #2a2a2a;
             display: block;
-            font-size: 1.25em;
-            font-weight: 700;
+            font-size: 1.75em;
+            font-weight: 100;
         }
 
         .excerpt {
