--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700|Roboto+Slab:400,100,300" %>
+    <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700|Lora:400,700,400italic" %>
     <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" %>
     <%= stylesheet_link_tag "application", :media => "all" %>
 </head>
