--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -1,4 +1,4 @@
-<div class="breadcrumb">
+<div class="breadcrumb clearfix">
     <ul>
         <li><a href="">All Fields</a>&nbsp;<i class="fa fa-angle-double-right"></i>&nbsp;</li>
         <li><a href="">Biology</a>&nbsp;<i class="fa fa-angle-double-right"></i>&nbsp;</li>
