--- a/app/assets/stylesheets/feed.css.scss
+++ b/app/assets/stylesheets/feed.css.scss
@@ -8,7 +8,7 @@ body.publications-index {
         padding: 20px;
 
         .title {
-            color: #2a2a2a;
+            color: #222222;
             display: block;
             font-size: 1.75em;
             font-weight: 100;
