--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -9,11 +9,25 @@
     <div class="col-md-3">
         <div class="filters-wrapper">
             <label>Filter By</label>
+                 <form>
+                   <t>Please enter your desired tags.
+                   <br>
+                   <input type="text" name="tag1">
+                   <input type="submit"/>
+                 </form>
+<!--                  <% if @data == nil %>
+                    data was nil
+                 <% else %>
+                    <%= @data %>
+                 <% end %> -->
         </div>
     </div>
     <div class="col-md-9">
         <div class="publications-list">
             <% @pubs.each do |publication| %>
+                <% if @data != nil %> 
+                  <% next if !(publication.title.include?(@data) or publication.abstract.include?(@data)) %>
+                <% end %>
                 <div class="publication">
                     <span class="category"></span>
                     <%= link_to publication.title, "/publication/" + (publication.pmid).to_s, :class => 'title' %>
